# cryptography_problems_knu_2021

lab1/: Cargo.toml
lab1/src/: main.rs
lab2/: Cargo.toml
lab2/src/: main.rs
