[package]
name = "khodz"
version = "0.1.0"
authors = ["Artyom Gevorgyan <artemhevorhian@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
concise-scanf-like-input = "0.1.0"
clap = "2.33.3"
rand = "0.8.3"
f128 = "0.2.6"